SFDCProject/src/objects/SR_Audit_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Name_On_File_Server__c</fullName>
        <label>Document Name On File Server</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Source__c</fullName>
        <label>Document Source</label>
        <picklist>
            <picklistValues>
                <fullName>Manual Upload</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Type_Name__c</fullName>
        <label>Document Type Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grand_Parent_Name__c</fullName>
        <formula>IF(InstallAudit__r.Generation_Asset__r.Id != null, InstallAudit__r.Generation_Asset__r.Name, (if(InstallAudit__r.Service_Contract__r.Id != null, InstallAudit__r.Service_Contract__r.Agreement_Number__c, &apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstallAudit__c</fullName>
        <label>Install Audit</label>
        <referenceTo>Install_Audit__c</referenceTo>
        <relationshipLabel>SR Audit Attachments</relationshipLabel>
        <relationshipName>SR_Audit_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <label>Parent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thumbnail__c</fullName>
        <label>Thumbnail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>SR Audit Attachment</label>
    <nameField>
        <displayFormat>AP-{0000000}</displayFormat>
        <label>SR Audit Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SR Audit Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>